Fixed spacing, added intro and fixed courses

--- a/css/main.css
+++ b/css/main.css
@@ -577,6 +577,29 @@ textarea {
         font-style: normal;
       }
 
+      .resume .about-intro {
+        display: flex;
+        flex-flow: row nowrap;
+        width: 100%;
+        margin-top: 20px;
+      }
+
+      .resume .about-intro figure {
+        width: 100%;
+        margin-right: 50px;
+        margin-top: 20px;
+      }
+
+      .resume img {
+        border-radius: 5px;
+        width: 100%
+      }
+
+      .resume .lead {
+        font-weight: bold;
+      }
+
+
       .experience {
         display: flex;
         justify-content: center;
@@ -822,7 +845,7 @@ textarea {
          flex-basis: 25%;
        }
 
-       .about .about-intro {
+       .about .about-intro{
          flex-flow: row nowrap;
          align-items: center;
        }
