--- a/css/resume.css
+++ b/css/resume.css
@@ -1,28 +1,3 @@
-/* colors */
-/* ---------------------------------------------------------
- *	General
- *  --------------------------------------------------------- */
-/* ---------------------------------------------------------
- *	Helper classes
- *  --------------------------------------------------------- */
-.mt20 {
-  margin-top: 20px;
-}
-.mt30 {
-  margin-top: 30px;
-}
-.mt40 {
-  margin-top: 40px;
-}
-.mt50 {
-  margin-top: 50px;
-}
-.mt60 {
-  margin-top: 60px;
-}
-.mt70 {
-  margin-top: 70px;
-}
 /* ---------------------------------------------------------
  *	Vertical timeline
  * --------------------------------------------------------- */
@@ -37,7 +12,7 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  width: 4px;
+  width: 3px;
   background: #bfd4db;
   left: 20%;
   margin-left: -6px;
